--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
+  },
+  "volta": {
+    "node": "18.18.2",
+    "npm": "9.8.1"
   }
 }
